--- a/index.html
+++ b/index.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Notifications page</title>
+    <title>Notifications page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Notifications 3
-
-  Mark all as read
-
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
-
-  Angela Gray followed you
-  5m ago
-
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
-
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
-
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="notice-box">
+      <header>
+        <nav>
+          <h1>Notifications</h1>
+          <span class="notification">3</span>
+        </nav>
+        <p class="read">Mark all as read</p>
+      </header>
+      <section>
+        <article class="notice">
+          <img
+            src="./assets/images/avatar-mark-webber.webp"
+            alt="Mark Webber"
+          />
+          <div>
+            <p>
+              <strong>Mark Webber</strong> reacted to your recent post
+              <strong class="grey">My first tournament today!</strong>
+            </p>
+            <p>1m ago</p>
+          </div>
+        </article>
+        <article class="notice">
+          <img
+            src="./assets/images/avatar-angela-gray.webp"
+            alt="Angela Gray"
+          />
+          <div>
+            <p><strong>Angela Gray</strong> followed you</p>
+            <p>5m ago</p>
+          </div>
+        </article>
+        <article class="notice">
+          <img
+            src="./assets/images/avatar-jacob-thompson.webp"
+            alt="Jacob Thompson"
+          />
+          <div>
+            <p>
+              <strong>Jacob Thompson</strong> has joined your group
+              <strong class="blue">Chess Club</strong>
+            </p>
+            <p>1 day ago</p>
+          </div>
+        </article>
+        <article class="notice">
+          <img
+            class="rizky"
+            src="./assets/images/avatar-rizky-hasanuddin.webp"
+            alt="Rizky Hasanuddin"
+          />
+          <div>
+            <p><strong>Rizky Hasanuddin</strong> sent you a private message</p>
+            <p>5 days ago</p>
+            <blockquote>
+              Hello, thanks for setting up the Chess Club. I've been a member
+              for a few weeks now and I'm already having lots of fun and
+              improving my game.
+            </blockquote>
+          </div>
+        </article>
+        <article class="notice">
+          <img
+            src="./assets/images/avatar-kimberly-smith.webp"
+            alt="Kimberly Smith"
+          />
+          <div>
+            <p><strong>Kimberly Smith</strong> commented on your picture</p>
+            <p>1 week ago</p>
+          </div>
+          <img
+            class="chess"
+            src="./assets/images/image-chess.webp"
+            alt="Chess"
+          />
+        </article>
+        <article class="notice">
+          <img
+            src="./assets/images/avatar-nathan-peterson.webp"
+            alt="Nathan Peterson"
+          />
+          <div>
+            <p>
+              <strong>Nathan Peterson</strong> reacted to your recent post 5
+              end-game strategies to increase your win rate
+            </p>
+            <p>2 weeks ago</p>
+          </div>
+        </article>
+        <article class="notice">
+          <img src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim" />
+          <div>
+            <p>
+              <strong>Anna Kim</strong> left the group
+              <strong class="blue">Chess Club</strong>
+            </p>
+            <p>2 weeks ago</p>
+          </div>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
